--- a/StuffYouDontLookAt/TestLevel/TestLevel.html
+++ b/StuffYouDontLookAt/TestLevel/TestLevel.html
@@ -1,16 +1,37 @@
+
 <html>
-    <head>
-        <title>Test World</title>
-        <link rel = "stylesheet" type = "text/css" href = "TestLevel.css">
-        <script src = "../resources/js/jquery.min.js"></script>
-         <script src = "../resources/js/jcanvas.min.js"></script>
 
-    </head>
-    <body>
-        <h1>Test Level, Only for testers :)</h1>
-        <canvas id="gameScreen" width="800" height="600"></canvas>
+   <head>
 
-    </body>
+       <title>Test World</title>
 
-    <script src = "TestLevel.js"></script>
+       <script
+
+ src="https://code.jquery.com/jquery-3.4.1.min.js"
+
+ integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+
+ crossorigin="anonymous"></script>
+
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/jcanvas/21.0.1/min/jcanvas.min.js" integrity="sha256-rUshvLY805GcMilbPNnko2JxFKj254/GJZwIP6yaiEk=" crossorigin="anonymous"></script>
+
+       <link href="TestLevel.css" rel="stylesheet" />
+
+   </head>
+
+   <body>
+
+       <div class="center">
+
+           <h1>Test Level, Only for testers :)</h1>
+
+           <canvas id="gameScreen" width="750px" height="500px"></canvas>
+
+       </div>
+
+   </body>
+
+
+   <script src = "src/index.js"></script>
+
 </html>
