--- a/TestLevel/TestLevel.html
+++ b/TestLevel/TestLevel.html
@@ -5,15 +5,9 @@
 
        <title>Test World</title>
 
-       <script
+       <script src="../resources/js/jquery.min.js"></script>
 
- src="https://code.jquery.com/jquery-3.4.1.min.js"
-
- integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-
- crossorigin="anonymous"></script>
-
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/jcanvas/21.0.1/min/jcanvas.min.js" integrity="sha256-rUshvLY805GcMilbPNnko2JxFKj254/GJZwIP6yaiEk=" crossorigin="anonymous"></script>
+       <script src="../resources/js/jcanvas.min.js"></script>
 
        <link href="TestLevel.css" rel="stylesheet" />
 
@@ -32,6 +26,6 @@
    </body>
 
 
-   <script src = "src/index.js"></script>
+   <script src = "TestLevel.js"></script>
 
 </html>
