Whoever did this, is so stupid. Its in the same directory so don't do it from the source >:(

--- a/TestLevel/index.html
+++ b/TestLevel/index.html
@@ -9,7 +9,7 @@
 
        <script src="../resources/js/jcanvas.min.js"></script>
 
-       <link href="/TestLevel/TestLevel.css" rel="stylesheet" />
+       <link href="TestLevel.css" rel="stylesheet" />
 
    </head>
 
@@ -27,6 +27,6 @@
 
 
 
-   <script src = "/TestLevel/TestLevel.js"></script>
+   <script src = "TestLevel.js"></script>
 
 </html>
