--- a/TestLevel/index.html
+++ b/TestLevel/index.html
@@ -1,32 +1,22 @@
-
 <html>
+  <head>
+    <title>Test World</title>
 
-   <head>
+    <script src="/resources/js/jquery.min.js"></script>
 
-       <title>Test World</title>
+    <script src="/resources/js/jcanvas.min.js"></script>
+    <script class="loader" src="../resources/js/loading.js"></script>
 
-       <script src="../resources/js/jquery.min.js"></script>
+    <link href="/TestLevel/TestLevel.css" rel="stylesheet" />
+  </head>
 
-       <script src="../resources/js/jcanvas.min.js"></script>
+  <body>
+    <div class="center">
+      <h1>Test Level, Only for testers :)</h1>
 
-       <link href="./TestLevel.css" rel="stylesheet" />
+      <canvas id="gameScreen" width="750px" height="500px"></canvas>
+    </div>
+  </body>
 
-   </head>
-
-   <body>
-
-       <div class="center">
-
-           <h1>Test Level, Only for testers :)</h1>
-
-           <canvas id="gameScreen" width="750px" height="500px"></canvas>
-
-       </div>
-
-   </body>
-
-
-
-   <script src = "./TestLevel.js"></script>
-
+  <script src="/TestLevel/TestLevel.js"></script>
 </html>
