--- a/LevelOne/LevelOne.html
+++ b/LevelOne/LevelOne.html
@@ -1,14 +1,22 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Level One</title>
-        <link rel = "stylesheet" type = "text/css" href = "LevelOne.css">
-    </head>
-    <body>
-        <h1>Mental Breakdown Level One</h1>
-        <div id="edge" class="edge">
-          <div id="playerdiv" class="playerdiv"></div>
-          <div id="bordertest" class="bordertest"></div>
-        </div>
-    </body>
+<html lang="en">
+  <head>
+    <title>Level One</title>
+
+    <script src="/resources/js/jquery.min.js"></script>
+
+    <script src="/resources/js/jcanvas.min.js"></script>
+    <script class="loader" src="/resources/js/loading.js"></script>
+
+    <link href="/LevelOne/LevelOne.css" rel="stylesheet" />
+  </head>
+
+  <body>
+    <div class="center">
+      <h1>Level One</h1>
+
+      <canvas id="gameScreen" width="750px" height="500px"></canvas>
+    </div>
+  </body>
+
+  <script src="/LevelOne/LevelOne.js"></script>
 </html>
